--- a/pybot.html
+++ b/pybot.html
@@ -21,7 +21,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="images/favicons//ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
-		<title> Home </title>
+		<title> Pybot </title>
 		<!-- End of that -->
 		<!-- Top nav bar definition -->
 		<div class="topnav">
@@ -32,7 +32,7 @@
 	</head>
 	
 	<body>
-		<p class="centre large"> Welcome. </p>
+		<p class="centre large"> Pybot. </p>
 	</body>
 	
 </html>
