--- a/pybot.html
+++ b/pybot.html
@@ -24,15 +24,26 @@
 		<title> Pybot </title>
 		<!-- End of that -->
 		<!-- Top nav bar definition -->
-		<div class="topnav">
-			<a class="active" href="#home">Home</a>
-			<a href="#pybot">Pybot</a>
-		</div>
-		
 	</head>
 	
 	<body>
-		<p class="centre large"> Pybot. </p>
+		
+<header>
+    <div class="container">
+		
+		<img src="images/whanos/moving whanos.gif" alt="logo" class="logo">
+      
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Pybot</a></li>
+		  <li><a href="#">Discord Server</a></li>
+		  <li><a href="#">Social Media</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+		
 	</body>
 	
 </html>
