--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
       
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Pybot</a></li>
-		  <li><a href="#">Discord Server</a></li>
-		  <li><a href="#">Social Media</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="pages/pybot.html">Pybot</a></li>
+		  <li><a href="pages/discord.html">Discord Server</a></li>
+		  <li><a href="pages/socials.html">Social Media</a></li>
         </ul>
       </nav>
     </div>
