still broke it.. genius
fixed

--- a/pages/discord.html
+++ b/pages/discord.html
@@ -5,7 +5,7 @@
 <title>Discord</title>
 	
 	<meta http-equiv="refresh" content="0; url=https://discord.me/mementos" />
-	<p><a href="https://discord.me/mementos">Redirect</a></p>
+	<p><a href="https://discord.me/mementos">Click here to be redirected.</a></p>
 
 </head>
 	
