--- a/pages/socials.html
+++ b/pages/socials.html
@@ -35,7 +35,7 @@
       
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="pages/pybot.html">Pybot</a></li>
 		  <li><a href="pages/discord.html">Discord Server</a></li>
 		  <li><a href="pages/socials.html">Social Media</a></li>
