--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="pages/pybot.html">Pybot</a></li>
-		  <li><a href="pages/discord.html">Discord Server</a></li>
-		  <li><a href="pages/socials.html">Social Media</a></li>
+          <li><a href="pybot.html">Pybot</a></li>
+		  <li><a href="discord.html">Discord Server</a></li>
+		  <li><a href="socials.html">Social Media</a></li>
         </ul>
       </nav>
     </div>
