actually populated some pages
yeet

--- a/pyhelp.html
+++ b/pyhelp.html
@@ -21,7 +21,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="images/favicons//ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
-		<title> Pybot </title>
+		<title> Home </title>
 		<!-- End of that -->
 		<!-- Top nav bar definition -->
 	</head>
@@ -43,10 +43,7 @@
       </nav>
     </div>
   </header>
-		<p class="large centre"> Pybot </p>
-		<p class="centre"> Pybot is a multi-purpose discord bot, which is constantly updated.</p>
-		<p class="centre"><a href="pyhelp.html">Pybot Commands</a></p>
-		<p class="centre"><a href="https://discordapp.com/oauth2/authorize?client_id=553606009545818129&scope=bot&permissions=8">Click here to download it.</a></p>
+		<p class="centre large"> Work. In. Progress.</p>
 	</body>
 	
 </html>
