--- a/socials.html
+++ b/socials.html
@@ -43,7 +43,11 @@
       </nav>
     </div>
   </header>
-		
+		<p class="centre large"> Social Media </p>
+		<p class="centre"> Discord Name: Whanos#0001 </p>
+		<p class="centre"> Discord Server: It's on the navbar. </p>
+		<p class="centre"><a href="https://twitter.com/WhanosTV">Twitter</a></p>
+		<p class="centre"><a href="https://www.youtube.com/channel/UC79T6tKdxGyzspOe27j5vEw">Youtube Channel</a></p>
 	</body>
 	
 </html>
