added sneaky comments
hehe

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 
+<!-- Hello!
+Welcome to the source code!
+
+It's good to be curious :) -->
+
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<!-- Defining styles and icons + some more -->
