--- a/socials.html
+++ b/socials.html
@@ -43,6 +43,8 @@
       </nav>
     </div>
   </header>
+		<!-- Instead of going through the source code, why not drop me a follow or
+		join the discord? :) -->
 		<p class="centre large"> Social Media </p>
 		<p class="centre"> Discord Name: Whanos#0001 </p>
 		<p class="centre"> Discord Server: It's on the navbar. </p>
