--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="images/favicons//ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
-		<title> Socials </title>
+		<title> Home </title>
 		<!-- End of that -->
 		<!-- Top nav bar definition -->
 	</head>
@@ -44,14 +44,12 @@
       </nav>
     </div>
   </header>
-		<!-- Instead of going through the source code, why not drop me a follow or
-		join the discord? :) -->
-		<p class="centre large"> Social Media </p>
-		<p class="centre"> Discord Name: Whanos#0001 </p>
-		<p class="centre"> Discord Server: It's on the navbar. </p>
-		<p class="centre"> Instagram: @whanos_himself </p>
-		<p class="centre"><a href="https://twitter.com/WhanosTV">Twitter</a></p>
-		<p class="centre"><a href="https://www.youtube.com/channel/UC79T6tKdxGyzspOe27j5vEw">Youtube Channel</a></p>
+		
+		<p class="centre large"> Contact Me </p>
+		<p class="centre"> You can contact me either by DMing me on Twitter, 
+			Dropping a DM on Discord, or emailing me at: </p>
+		<p class="centre underline"> tom@masterme.ch </p>
+		
 	</body>
 	
 </html>
