--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@ It's good to be curious :) -->
           <li><a href="pybot.html">Pybot</a></li>
 		  <li><a href="discord.html">Discord Server</a></li>
 		  <li><a href="socials.html">Social Media</a></li>
+		  <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
+		
+		<p class="centre large"> Hi, I'm Tom. </p>
+		<p class="centre"> Welcome to my website. </p>
 		
 	</body>
 	
