--- a/pybot.html
+++ b/pybot.html
@@ -39,6 +39,7 @@
           <li><a href="pybot.html">Pybot</a></li>
 		  <li><a href="discord.html">Discord Server</a></li>
 		  <li><a href="socials.html">Social Media</a></li>
+		  <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
