--- a/tcresearch.html
+++ b/tcresearch.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Thaumcraft 4.x-5.x Research Helper</title>
+	<p style="font-size: 90%"> Credit to github.com/ythri/ for creating the code.</p>
 	<script type="text/javascript" src="buckets-minified.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
