--- a/pybot.html
+++ b/pybot.html
@@ -44,8 +44,8 @@
       </nav>
     </div>
   </header>
-		<p class="large centre"> Pybot </p>
-		<p class="centre"> Pybot is a multi-purpose discord bot, which is constantly updated.</p>
+		<p class="large centre"> WhanOS </p>
+		<p class="centre"> WhanOS is a multi-purpose discord bot, which is constantly updated.</p>
 		<p class="centre"><a href="https://discordapp.com/oauth2/authorize?client_id=553606009545818129&scope=bot&permissions=8">Click here to add it to your server.</a></p>
 	</body>
 	
