updated this and that

--- a/contact.html
+++ b/contact.html
@@ -46,9 +46,8 @@
   </header>
 		
 		<p class="centre large"> Contact Me </p>
-		<p class="centre"> You can contact me either by DMing me on Twitter, 
-			Dropping a DM on Discord, or emailing me at: </p>
-		<p class="centre underline"> tom@masterme.ch </p>
+		<p class="centre"> You can contact me either by DMing me on Twitter or  
+			Dropping a DM on Discord.
 		
 	</body>
 	
