--- a/discord.html
+++ b/discord.html
@@ -9,8 +9,8 @@ Redirection
 <meta charset="utf-8">
 <title>Discord</title>
 	
-	<meta http-equiv="refresh" content="0; url=https://discord.me/mementos" />
-	<p><a href="https://discord.me/mementos">Click here to be redirected.</a></p>
+	<meta http-equiv="refresh" content="0; url=https://discord.gg/9Hg2rJF" />
+	<p><a href="https://discord.gg/9Hg2rJF">Click here to be redirected.</a></p>
 
 </head>
 	
