--- a/other/index.html
+++ b/other/index.html
@@ -48,7 +48,7 @@
 </div>
 </div>
 <!-- scripts -->
-<script src="../particles.js"></script>
+<script src="particles.js"></script>
 <script src="js/app.js"></script>
 
 </body>
