--- a/pybot.html
+++ b/pybot.html
@@ -46,7 +46,7 @@
   </header>
 		<p class="large centre"> WhanOS </p>
 		<p class="centre"> WhanOS is a multi-purpose discord bot, which is constantly updated.</p>
-		<p class="centre"><a href="https://discordapp.com/oauth2/authorize?client_id=553606009545818129&scope=bot&permissions=8">Click here to add it to your server.</a></p>
+		<p class="centre"><a href="https://discordapp.com/oauth2/authorize?client_id=677548580273258509&scope=bot&permissions=2146958583">Click here to add it to your server.</a></p>
 	</body>
 	
 </html>
