--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ It's good to be curious :) -->
     </div>
   </header>
 		
-		<p class="centre large"> Hi, I'm Tom. </p>
+		<p class="centre large"> Hi, I'm Whanos. </p>
 		<p class="centre"> Welcome to my website. </p>
 		
 	</body>
