Changes HTML CSS

--- a/index.html
+++ b/index.html
@@ -6,53 +6,54 @@ Welcome to the source code!
 It's good to be curious :) -->
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<!-- Defining styles and icons + some more -->
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="images/favicons//apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="images/favicons//apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="images/favicons//apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="images/favicons//apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="images/favicons//apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="images/favicons//apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="images/favicons//apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="images/favicons//apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="images/favicons//android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="images/favicons//favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="images/favicons//favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="images/favicons//favicon-16x16.png">
-		<link rel="manifest" href="images/favicons//manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="images/favicons//ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
-		<title> Home </title>
-		<!-- End of that -->
-		<!-- Top nav bar definition -->
-	</head>
-	
-	<body>
-		
-<header>
-    <div class="container">
-		
-		<img src="images/whanos/moving whanos.gif" alt="logo" class="logo">
-      
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pybot.html">WhanOS</a></li>
-		  <li><a href="discord.html">Discord Server</a></li>
-		  <li><a href="socials.html">Social Media</a></li>
-		  <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-		
-		<p class="centre large"> Hi, I'm Whanos. </p>
-		<p class="centre"> Welcome to my website. </p>
-		
-	</body>
-	
+
+<head>
+    <!-- Defining styles and icons + some more -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/favicons//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/favicons//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/favicons//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/favicons//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="images/favicons//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicons//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons//favicon-16x16.png">
+    <link rel="manifest" href="images/favicons//manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="images/favicons//ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <title> Home </title>
+    <!-- End of that -->
+    <!-- Top nav bar definition -->
+</head>
+
+<body>
+
+    <header>
+        <div class="container">
+
+            <img src="images/whanos/moving whanos.gif" alt="logo" class="logo">
+
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pybot.html">WhanOS</a></li>
+                    <li><a href="discord.html">Discord Server</a></li>
+                    <li><a href="socials.html">Social Media</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <h1 class="title centre"> Hi, I'm Whanos. </h1>
+    <p class="subtitle centre"> Welcome to my website. </p>
+
+</body>
+
 </html>
