Home page css/html changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ It's good to be curious :) -->
 
 <head>
     <!-- Defining styles and icons + some more -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
     <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="images/favicons//apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/favicons//apple-icon-72x72.png">
@@ -33,27 +33,20 @@ It's good to be curious :) -->
 </head>
 
 <body>
-
-    <header>
-        <div class="container">
-
-            <img src="images/whanos/moving whanos.gif" alt="logo" class="logo">
-
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pybot.html">WhanOS</a></li>
-                    <li><a href="discord.html">Discord Server</a></li>
-                    <li><a href="socials.html">Social Media</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <h1 class="title centre"> Hi, I'm Whanos. </h1>
-    <p class="subtitle centre"> Welcome to my website. </p>
-
+    <div class="container">
+        <h1 class="title">I AM WHANOS</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pybot.html">WhanOS</a></li>
+                <li><a href="discord.html">Discord Server</a></li>
+                <li><a href="socials.html">Social Media</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <img src="images/whanos/moving whanos.gif" alt="logo" class="logo">
+        <h1>WELCOME TO MY WEBSITE</h1>
+    </div>
 </body>
 
 </html>
